# hotel-booking-app

svc/hotel/: pyproject.toml
svc/hotel/alembic/: env.py
svc/hotel/alembic/versions/: 11b3dabbd185_.py  a2d7cf75665b_.py
svc/hotel/src/app/: dto.py  enum.py  exception.py  interface.py  service.py  usecase.py
svc/hotel/src/inf/db/: uow.py
svc/hotel/src/inf/db/postgres/: config.py  dao.py  engine.py  model.py
svc/hotel/src/inf/web/: app.py
